fixed task edit overlap with add task

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,15 +31,15 @@ body {
 
 ::-webkit-scrollbar-thumb {
   height: 6px;
-  border: 4px solid rgba(0, 0, 0, 0);
+  border: 4px solid rgba(0, 0, 0, 0) !important;
   background-clip: padding-box;
-  background-color: rgba(0, 0, 0, 0, 0.2);
-  border-radius: 7px !important;
+  background-color: rgba(0, 0, 0, 0.4) !important;
+  border-radius: 20px !important;
   box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05),
-    inset 1px 1px 0px rgba(0, 0, 0, 0.05);
-  -webkit-border-radius: 7px;
+    inset 1px 1px 0px rgba(0, 0, 0, 0.05) !important;
+  -webkit-border-radius: 20px !important;
   -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05),
-    inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+    inset 1px 1px 0px rgba(0, 0, 0, 0.05) !important;
 }
 
 ::-webkit-scrollbar-button {
